# oci-dev-binder-hook

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  Cargo.toml  README.md  cliff.toml  deny.toml  meson.build  meson_options.txt  rustfmt.toml
.github/workflows/: ci.yml
data/: meson.build  oci-dev-binder-hook.json.in
rpm/: meson.build  oci-dev-binder-hook.spec  oci-dev-binder-hook.spec.in
src/: cli.rs  lib.rs  main.rs  meson.build  oci_spec.rs  udev.rs
tests/: main.rs
tools/: build-srpm.sh  dist.sh
