[package]
name = "oci-dev-binder-hook"
version = "0.1.0"
edition = "2024"
description = "OCI Device Binder Hook"
authors = [
    "Roberto Majadas <rmajadas@redhat.com>",
    "Albert Esteve <aesteve@redhat.com>",
]
license = "GPL-2.0-or-later"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4.28"
oci-spec = "0.8.2"
serde_json = "1.0"
udev = "0.9.3"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
