[package]
name = "oci-dev-binder-hook"
version = "0.1.0"
edition = "2024"
description = "OCI Device Binder Hook"
authors = [
    "Roberto Majadas <rmajadas@redhat.com>",
    "Albert Esteve <aesteve@redhat.com>",
]
license = "GPL-2.0-or-later"

[features]
disable-udev-required-tests = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
oci-spec = ">=0.6.8, < 0.9.0"
serde_json = "1.0"
udev = "0.9.3"

[dev-dependencies]
tempfile = ">=3.21.0, <4.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
