option (
  'profile',
  type: 'combo',
  choices: [
    'default',
    'development'
  ],
  value: 'default',
  description: 'The build profile for oci-dev-binder-hook. One of "default" or "development".'
)
option('build_rpm_spec', type: 'boolean', value: false, description: 'Build RPM spec file')
option('disable_udev_required_tests', type: 'boolean', value: false, description: 'Disable udev required tests')
